<resources>
    <string name="app_name">Ember Medics</string>
    <string name="news_feed">News Feed</string>
    <string name="registration">Registration</string>
    <string name="news_feed_coming_soon">News Feed \n coming soon…</string>
    <string name="cardiac_call">Cardiac Call</string>
    <string name="triage_call">Triage Call</string>
    <string name="immediate">Immediate</string>
    <string name="high">High</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="no_alerts_available">No alerts available</string>
    <string name="no_incident_reports_available">No incident reports available</string>
    <string name="accept_request_message">Are you sure, you want to accept this request?</string>
    <string name="complete_request_message">Are you sure, you want to complete this request?</string>
    <string name="submit_feedback_message">Are you sure, you want to submit the feedback?</string>
    <string name="accepted_request_message">Another provider has accepted this request.</string>
    <string name="canceled_request_message">The user has canceled this request.</string>
    <string name="patient_disease">Patient Disease:</string>
    <string name="patient_symptoms">Patient Symptom:</string>
    <string name="complete_request">Complete Request</string>
    <string name="respond">Respond</string>
    <string name="respond_for_">Respond for $</string>
    <string name="away">&#160;away</string>
    <!--Side menus-->
    <string name="account_settings">Account Settings</string>
    <string name="incident_reports">Incident Reports</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="how_it_works">How It Works</string>
    <string name="aed_maps">AED Maps</string>
    <string name="contact_us">Contact Us</string>
    <string name="triage">Triage</string>

    <string name="submit">Submit</string>
    <string name="incident_report_details">Incident Report Details</string>
    <string name="is_victim_life_saved">Is victim life saved?</string>
    <string name="title">Title</string>
    <string name="incident_report">Incident Report</string>
    <string name="comment_colon">Comment:</string>
    <string name="title_colon">Title:</string>
    <string name="comment">Comment</string>

    <string name="error_empty_incident_report_title">Please enter the title of incident report.</string>
    <string name="error_empty_incident_report_comment">Please enter the details about incident in comment.</string>
    <string name="error_select_is_victims_life_saved">Please select victim\'s life saved or not.</string>
    <string name="submit_incident_report_message">Are you sure, you want to submit the incident report?</string>
    <string name="submit_registration"> Are you sure, you want to submit the registration form?</string>
    <string name="view">View</string>
    <string name="rate_caller">Rate Caller</string>
    <string name="rate_caller_colon">Rate Caller:</string>
    <string name="skip"><u>Skip</u></string>
    <string name="where_should_caller_go">Where should caller go?</string>
    <string name="go_to_er">Go to ER</string>
    <string name="go_to_urgent_care">Go to Urgent Care</string>
    <string name="go_to_pcp">Go to PCP</string>
    <string name="reason">Reason</string>
    <string name="caller_visit">Caller Visit:</string>
    <string name="reason_colon">Reason:</string>
    <string name="see_more"><u>SEE MORE</u></string>
    <string name="see_less"><u>SEE LESS</u></string>
    <string name="error_select_caller_feedback">Please select caller feedback.</string>
    <string name="error_empty_reason">Please enter reason.</string>
    <string name="amount">Amount:</string>
    <string name="call_duration">Call Duration:</string>
    <string name="completed_on">Completed On:</string>
    <string name="pending">Pending</string>

    <!--for how it works screen-->
    <string name="info_cardiac_call">How to attend cardiac call?</string>
    <string name="info_triage_call">How to attend triage call?</string>
    <string name="info_concierge_call">How to attend concierge call?</string>
    <string name="info_add_subscription_plan">How to subscribe?</string>

    <string name="caller_rating">Caller Rating:</string>

    <string name="book_uber">Book Uber</string>

    <string name="tutorial_title_request_list">Action 1</string>
    <string name="tutorial_description_cardiac_request_list">Tap here to view cardiac alert details.</string>
    <string name="tutorial_description_triage_request_list">Tap here to view triage alert details.</string>
    <string name="tutorial_title_request_details">Action 2</string>
    <string name="tutorial_description_cardiac_request_details">Tap here to accept a cardiac call alert.</string>
    <string name="tutorial_description_triage_request_details">Tap here to accept a triage call alert.</string>
    <string name="file_limit_max_2mb"><i>(Max 2MB)</i></string>

    <!--registration strings-->
    <string name="txt_upload_cpr_certificate">Upload CPR Certificate</string>
    <string name="txt_upload_medical_certificate">Upload Medical Certificate</string>

    <string name="my_profile">My Profile</string>
    <string name="txt_personal_cap">PERSONAL</string>
    <string name="txt_phone_no">Phone No.</string>
    <string name="txt_address_optional">Address (optional)</string>
    <string name="txt_profession">PROFESSION</string>
    <string name="txt_occupation">Occupation</string>
    <string name="txt_other_occupation">if other, mention your occupation.</string>
    <string name="txt_institute_name">Institute name</string>
    <string name="txt_cpr">CPR</string>
    <string name="txt_cpr_institution">CPR Training Institution</string>
    <string name="txt_cpr_certificate_expiry_date">CPR Certificate Expiry Date</string>
    <string name="txt_medical_license_cap">MEDICAL LICENSE</string>
    <string name="txt_license_number_npi_number">License Number / NPI Number?</string>
    <string name="txt_other_cap">OTHER</string>
    <string name="txt_question_telehealth_triage_platform">Do you want to participate in the telehealth triage platform?</string>
    <string name="txt_question_speciality_or_subspeciality">what is your speciality or subspeciality?</string>
    <string name="txt_practise_state">Which state are you licensed to practise in?</string>
    <string name="txt_privacy_policy"><a href="https://www.embermed.com">Privacy Policy</a></string>
    <string name="txt_terms_of_service"><a href="https://www.embermed.com">Terms of Service</a></string>
    <string name="txt_registration_form_poilicy_description">By submitting this registration form, you agree to our</string>
    <string name="txt_status_cap">STATUS</string>

    <string name="txt_pending_info">Your request has been submitted and is pending for approval.</string>

    <string name="error_illegal_file">Illegal file. Please select an image or a pdf file.</string>
    <string name="error_large_file">Please select a file with maximum size 2MB.</string>
    <string name="error_upload_file">Unable to process file, Please try again.</string>
    <string name="type_here">Type Here…</string>
    <string name="txt_did_participated_in_telehealth">Did participated in telehealth triage platform?</string>
    <string name="view_cpr_certificate">View CPR certificate</string>
    <string name="view_medical_certificate">View Medical Certificate</string>
    <string name="error_file_not_found">Something went wrong. Please try again later.</string>
    <string name="error_invalid_file_link">Broken file link.</string>
    <string name="error_invalid_selected_file">Please select file from another source.</string>
</resources>
