<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="SpUsage,UnusedAttribute,RtlSymmetry,ContentDescription">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_cardiac_service"
                style="@style/cv_how_it_works">

                <TextView
                    style="@style/tv_how_it_works"
                    android:text="@string/info_cardiac_call" />

                <ImageView style="@style/iv_forward_arrow" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_triage_service"
                style="@style/cv_how_it_works">

                <TextView
                    style="@style/tv_how_it_works"
                    android:text="@string/info_triage_call" />

                <ImageView style="@style/iv_forward_arrow" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add_subscription"
                style="@style/cv_how_it_works">

                <TextView
                    style="@style/tv_how_it_works"
                    android:text="@string/info_add_subscription_plan" />

                <ImageView style="@style/iv_forward_arrow" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>