<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        tools:ignore="SpUsage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:singleLine="true"
            android:text="@string/incident_report"
            android:textColor="@color/provider_secondary_text_color"
            android:textSize="@dimen/_18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp">

            <TextView
                android:id="@+id/txt_patient_disease_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:text="@string/is_victim_life_saved"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_16dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <RadioButton
                    android:id="@+id/rdb_victim_life_saved_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_16dp" />

                <RadioButton
                    android:id="@+id/rdb_victim_life_saved_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16dp"
                    android:text="@string/no"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_16dp" />
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/edt_title"
            style="@style/EditTextStyle"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/shape_border"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_16dp"
            android:theme="@style/EditTextHint" />

        <EditText
            android:id="@+id/edt_comment"
            style="@style/EditTextStyle"
            android:layout_height="@dimen/_140dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_12dp"
            android:background="@drawable/shape_border"
            android:gravity="start"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_16dp"
            android:theme="@style/EditTextHint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:weightSum="1080">

            <Button
                android:id="@+id/btn_submit"
                style="@style/BtnStyle"
                android:layout_width="0dp"
                android:layout_margin="0dp"
                android:layout_weight="500"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>

</layout>