<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            tools:ignore="SpUsage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_bg_color"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/caller_visit"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_18dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:fontFamily="sans-serif"
                        android:text="Go to ER"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/reason_colon"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_18dp" />

                    <TextView
                        android:id="@+id/tv_reason"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:fontFamily="sans-serif"
                        android:maxLines="4"
                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/iv_three_dots"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_three_dots"
                            android:contentDescription="@null" />

                        <TextView
                            android:id="@+id/tv_see_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="end"
                            android:layout_marginEnd="@dimen/_n_16dp"
                            android:background="@drawable/ripple_default_bg"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:padding="@dimen/_16dp"
                            android:text="@string/see_more"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_10dp" />

                        <TextView
                            android:id="@+id/tv_see_less"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="end"
                            android:layout_marginEnd="@dimen/_n_16dp"
                            android:background="@drawable/ripple_default_bg"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:padding="@dimen/_16dp"
                            android:text="@string/see_less"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_10dp"
                            android:visibility="gone" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/request_card_padding_start_end">

                <TextView
                    android:id="@+id/txt_incident_report_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxWidth="@dimen/requester_name_max_width"
                    android:singleLine="true"
                    android:text="@string/incident_report"
                    android:textColor="@color/provider_secondary_text_color"
                    android:textSize="@dimen/incident_report_text_size" />

                <EditText
                    android:id="@+id/edt_title"
                    style="@style/EditTextStyle"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/comment_margin_top"
                    android:background="@drawable/shape_border"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="@dimen/incident_report_input_text_padding"
                    android:theme="@style/EditTextHint" />

                <EditText
                    android:id="@+id/edt_comment"
                    style="@style/EditTextStyle"
                    android:layout_height="@dimen/comment_et_height"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/comment_margin_top"
                    android:background="@drawable/shape_border"
                    android:gravity="start"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:padding="@dimen/incident_report_input_text_padding"
                    android:theme="@style/EditTextHint" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/submit_button_margin_top"
                    android:gravity="center"
                    android:weightSum="1080">

                    <Button
                        android:id="@+id/btn_submit"
                        style="@style/BtnStyle"
                        android:layout_width="0dp"
                        android:layout_margin="0dp"
                        android:layout_weight="500"
                        android:text="@string/submit" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>